# edge-adas

./: .gitignore  README.md  THEORY.md  download.py  pyproject.toml
src/: camera_api.py  camera_api_cpu.py  main.py
src/adas/control/: mpc_controller.py  mpcv2.py
src/adas/gps/: checkpoint.py
src/adas/perception/lane/: lane_perception.py  lane_temporal.py  lane_v2.py
src/adas/perception/object/: object_brake.py
src/adas/perception/road/: road_perception.py  road_v2.py  segmentation.py
src/api/: models.py
src/inference/: object_engine.py  openvino_engine.py  tensorrt_engine.py  trt_object_engine.py
src/static/: index.html
src/test/: benchmark.py  debug_engine.py  test_gps.py  test_infer.py  test_model.py  test_model_trt.py  test_trt_infer.py  test_video.py  trt_object_test.py  trt_yolop_test.py
src/utils/: codec.py  image.py  nms.py
