[project]
name = "autonomy-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.126.0",
    "msgpack>=1.1.2",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "openvino>=2025.4.1",
    "scipy>=1.17.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.40.0",
]
